--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-static": "^1.0.0-next.29",
     "@sveltejs/adapter-vercel": "^1.0.0-next.47",
     "@sveltejs/kit": "next",
     "autoprefixer": "^10.4.4",
