--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
-    "@sveltejs/adapter-static": "^1.0.0-next.29",
-    "@sveltejs/adapter-vercel": "^1.0.0-next.47",
     "@sveltejs/kit": "next",
     "autoprefixer": "^10.4.4",
     "daisyui": "^2.9.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.1.0",
     "marked": "^4.0.12",
     "postcss": "^8.4.12",
     "prettier": "^2.5.1",
